*Empty MediaWiki Message*

--- a/گندهارا.mw
+++ b/گندهارا.mw
@@ -1,9 +1,13 @@
 {{otheruses4|the ancient kingdom|the Philippine municipality|Gandara, Samar}}
 [[Image:Ancient india.png|کيڼ|400px]]
 
-'''Gandhāra''' ([[سانسکرېت]]: गन्धार [[پښتو]]: '''ګندھارا''' ''Gandḥārā'';  also known as '''Waihind''' in Persian)<ref>[http://www.takeourword.com/TOW137/page1.html Tale Our Word For It: Spotlight on Topical Terms]</ref> is the name of an ancient kingdom ([[Mahajanapada]]),  in what is now northern [[Pakistan]] and eastern [[Afghanistan]]. Gandhara was located mainly in the vale of [[Peshawar]], the [[Potohar]] plateau (see [[Taxila]]) and on the [[Kabul River]]. Its main cities were Purushapura (modern [[Peshawar]]), literally meaning City of Man<ref>from Sanskrit puruṣa= (primordial) man and pura=city</ref> and Takshashila (modern [[Taxila]]).<ref>[http://concise.britannica.com/ebc/article-9035986/Gandhara Encyclopædia Britannica: Gandhara]</ref> Gandhara is described as 'the place of light,' in the song of the same name by Japanese band [[Godiego]] which was used as the closing theme to the first season of the TV series [[Monkey (TV Series)|Monkey]].
+'''ګندهارا''' ([[سانسکرېت]]: गन्धार 
+[[پښتو]]: '''ګندھارا''' '' دارنګه په پاړسي چې د وایهند <ref>[http://www.takeourword.com/TOW137/page1.html Tale Our Word For It: Spotlight on Topical Terms]</ref> په نامه پېژندل کېږي، د مهاجناپادا لرغونې بادشاهي (د نن ورځې پښتونخوا او ختیځ افغانستان) تېره شوې.  ګندهارا د کابل پر سیند پرته پراخه جلالکوټ، پېښور، پټوهار [[ټکسلا]] پراخه سیمه ده. 
+ددې بادشاهۍ اصلي ښارونه له پروشاپور (پېښور) <ref>from Sanskrit puruṣa= (primordial) man and pura=city</ref>، چې (د سړي د ښار) نامه دی، تکشاشیلا (نننۍ ټکسلا)،<ref>[http://concise.britannica.com/ebc/article-9035986/Gandhara Encyclopædia Britannica: Gandhara]</ref> 
+په لرغونو ویدي سندرو کې ګندهارا د رڼاګانو د ځای په مانا راغلې دی.
+د ګندهارا بادشاهي له شپږمې مخزېږدې پېړۍ څخه نیولې تر ۱۱مې زېږدې پېړۍ پورې شتون درلود. لدې پیر څخه وروسته په ۱۰۲۱ زېږدې پېړۍ کې دا پراخه سیمه د افغان بادشاه سلطان محمود غزنوي تر ولکې لاندې راغله.  او لدې څخه وروسته د  ګندهارا نوم  مخ په ورکېدو شو.
+د افغان واکمنو پر پیر کې به دا پراخه سیمه له کندهار، غزني، غور او بیا په وروستي وخت کې له کابل څخه اداره کېده. د مغولو په پیر کې دا سیمه د کابل د والي لخوا اداره کېده.
 
-The Kingdom of Gandhara lasted from c. the 6th century BC to the 11th century AD. It attained its height from the 1st century to the 5th century under  the Buddhist [[Kushan]] Kings. After it was conquered by [[Mahmud of Ghazni]] in AD 1021, the name Gandhara disappeared. During the Muslim period the area was administered from [[Lahore]] or from [[Kabul]]. During [[Mughal]] times the area was part of Kabul province.
 
 ==جغرافیه==
 
