--- a/گندهارا.mw
+++ b/گندهارا.mw
@@ -2,11 +2,10 @@
 [[Image:Ancient india.png|کيڼ|400px]]
 
 '''ګندهارا''' ([[سانسکرېت]]: गन्धार 
-[[پښتو]]: '''ګندھارا''' '' دارنګه په پاړسي چې د وایهند <ref>[http://www.takeourword.com/TOW137/page1.html Tale Our Word For It: Spotlight on Topical Terms]</ref> په نامه پېژندل کېږي، د مهاجناپادا لرغونې بادشاهي (د نن ورځې پښتونخوا او ختیځ افغانستان) تېره شوې.  ګندهارا د کابل پر سیند پرته پراخه جلالکوټ، پېښور، پټوهار [[ټکسلا]] پراخه سیمه ده. 
-ددې بادشاهۍ اصلي ښارونه له پروشاپور (پېښور) <ref>from Sanskrit puruṣa= (primordial) man and pura=city</ref>، چې (د سړي د ښار) نامه دی، تکشاشیلا (نننۍ ټکسلا)،<ref>[http://concise.britannica.com/ebc/article-9035986/Gandhara Encyclopædia Britannica: Gandhara]</ref> 
-په لرغونو ویدي سندرو کې ګندهارا د رڼاګانو د ځای په مانا راغلې دی.
-د ګندهارا بادشاهي له شپږمې مخزېږدې پېړۍ څخه نیولې تر ۱۱مې زېږدې پېړۍ پورې شتون درلود. لدې پیر څخه وروسته په ۱۰۲۱ زېږدې پېړۍ کې دا پراخه سیمه د افغان بادشاه سلطان محمود غزنوي تر ولکې لاندې راغله.  او لدې څخه وروسته د  ګندهارا نوم  مخ په ورکېدو شو.
-د افغان واکمنو پر پیر کې به دا پراخه سیمه له کندهار، غزني، غور او بیا په وروستي وخت کې له کابل څخه اداره کېده. د مغولو په پیر کې دا سیمه د کابل د والي لخوا اداره کېده.
+[[پښتو]]: '''ګندھارا''' '' دارنګه په پاړسي چې د وایهند <ref>[http://www.takeourword.com/TOW137/page1.html Tale Our Word For It: Spotlight on Topical Terms]</ref> په نامه پېژندل کېږي، د مهاجناپادا لرغونې بادشاهي (د نن ورځې پښتونخوا او ختیځ افغانستان) تېره شوې.  ګندهارا د کابل پر سیند پرته جلالکوټ، پېښور، سوات، مردان (تخت بايي)، چارسده،  [[ټکسلا]] او [[پټوهار]] پراخه سیمه باندې پروت و. 
+ددې بادشاهۍ اصلي ښارونه له پروشاپور (پېښور) <ref>from Sanskrit puruṣa= (primordial) man and pura=city</ref>، چې (د سړي د ښار) نامه دی، تکشاشیلا (نننۍ ټکسلا)،<ref>[http://concise.britannica.com/ebc/article-9035986/Gandhara Encyclopædia Britannica: Gandhara]</ref>  او همدا ددې لرغوني تمدن ټاټوبې و.
+د ګندهارا یادونه په لرغونو ویدي سندرو او د بودا په ویناوو کې د رڼاګانو د ځای په مانا راغلې دی.
+چینایي ګرځندوی هیون سانګ چې ددې سیمو په زیارت راوتلې و، ددې سیمې یادونه په ښه تفصیل سره کړې. د هندي فلسفې نامتو فیلسوف کوټلیا چانکیا په هغه پیر کې ژوندې و، کله چې ستر سکندر په ټېکسلا برید وکړ... د کوشانیانو پیر ددې واکمنۍ یو زرین پیر پېژندل کېږي. د کنېشکا واکمن په پیر کې د ګندهارا تمدن خپل لوړو پوړیو ته ورسېد. ګندهارا د بودیزم د دیني ښوونو منځۍ وګرځېد، او خلک به له لری، لری 
 
 
 ==جغرافیه==
