--- a/گندهارا.mw
+++ b/گندهارا.mw
@@ -8,6 +8,9 @@
 چینایي ګرځندوی هیون سانګ چې ددې سیمو په زیارت راوتلې و، ددې سیمې یادونه په ښه تفصیل سره کړې. د هندي فلسفې نامتو فیلسوف کوټلیا چانکیا په هغه پیر کې ژوندې و، کله چې ستر سکندر په ټېکسلا برید وکړ... د کوشانیانو پیر ددې واکمنۍ یو زرین پیر پېژندل کېږي. د کنېشکا واکمن په پیر کې د ګندهارا تمدن خپل لوړو پوړیو ته ورسېد. ګندهارا د بودیزم د دیني ښوونو منځۍ وګرځېد، او خلک به له لری، لری 
 
 
+واټنونو څخه دې ځای ته د زده کړې لپاره راتللل پیل شول. یوناني، پارسي تمدنونو هم د ګندهارا په لرغوني تمدن باندې یو څه اغیز پرېښود. 
+د ګندهارا بادشاهي له شپږمې مخزېږدې پېړۍ څخه نیولې تر ۱۱مې زېږدې 
+
 ==جغرافیه==
 
 [[Image:GandharaFemale.JPG|thumb|150px|Female spouted figure, terracotta, Charsadda, Gandhara, 3rd-1st century BC [[Victoria and Albert Museum]]]]
