--- a/گندهارا.mw
+++ b/گندهارا.mw
@@ -11,6 +11,9 @@
 واټنونو څخه دې ځای ته د زده کړې لپاره راتللل پیل شول. یوناني، پارسي تمدنونو هم د ګندهارا په لرغوني تمدن باندې یو څه اغیز پرېښود. 
 د ګندهارا بادشاهي له شپږمې مخزېږدې پېړۍ څخه نیولې تر ۱۱مې زېږدې 
 
+پېړۍ پورې شتون درلود. لدې پیر څخه وروسته په ۱۰۲۱ زېږدې کې دا پراخه سیمه د افغان بادشاه سلطان محمود غزنوي تر ولکې لاندې راغله.  او لدې څخه وروسته د  ګندهارا نوم  مخ په ورکېدو شو.
+د افغان واکمنو پر پیر کې به دا پراخه سیمه له کندهار، غزني، غور او بیا په وروستي وخت کې له کابل څخه اداره کېده. د مغولو په پیر کې دا سیمه د کابل د والي لخوا اداره کېده.
+
 ==جغرافیه==
 
 [[Image:GandharaFemale.JPG|thumb|150px|Female spouted figure, terracotta, Charsadda, Gandhara, 3rd-1st century BC [[Victoria and Albert Museum]]]]
