*Empty MediaWiki Message*

--- a/گندهارا.mw
+++ b/گندهارا.mw
@@ -1,3 +1,4 @@
+[[انځور:Gandahara Buddha.JPG|thumb|230px|left|د ګندهارا پیر د بودا (پژۍ]]
 {{otheruses4|the ancient kingdom|the Philippine municipality|Gandara, Samar}}
 [[Image:Ancient india.png|کيڼ|400px]]
 
@@ -6,11 +7,8 @@
 ددې بادشاهۍ اصلي ښارونه له پروشاپور (پېښور) <ref>from Sanskrit puruṣa= (primordial) man and pura=city</ref>، چې (د سړي د ښار) نامه دی، تکشاشیلا (نننۍ ټکسلا)،<ref>[http://concise.britannica.com/ebc/article-9035986/Gandhara Encyclopædia Britannica: Gandhara]</ref>  او همدا ددې لرغوني تمدن ټاټوبې و.
 د ګندهارا یادونه په لرغونو ویدي سندرو او د بودا په ویناوو کې د رڼاګانو د ځای په مانا راغلې دی.
 چینایي ګرځندوی هیون سانګ چې ددې سیمو په زیارت راوتلې و، ددې سیمې یادونه په ښه تفصیل سره کړې. د هندي فلسفې نامتو فیلسوف کوټلیا چانکیا په هغه پیر کې ژوندې و، کله چې ستر سکندر په ټېکسلا برید وکړ... د کوشانیانو پیر ددې واکمنۍ یو زرین پیر پېژندل کېږي. د کنېشکا واکمن په پیر کې د ګندهارا تمدن خپل لوړو پوړیو ته ورسېد. ګندهارا د بودیزم د دیني ښوونو منځۍ وګرځېد، او خلک به له لری، لری 
-
-
 واټنونو څخه دې ځای ته د زده کړې لپاره راتللل پیل شول. یوناني، پارسي تمدنونو هم د ګندهارا په لرغوني تمدن باندې یو څه اغیز پرېښود. 
 د ګندهارا بادشاهي له شپږمې مخزېږدې پېړۍ څخه نیولې تر ۱۱مې زېږدې 
-
 پېړۍ پورې شتون درلود. لدې پیر څخه وروسته په ۱۰۲۱ زېږدې کې دا پراخه سیمه د افغان بادشاه سلطان محمود غزنوي تر ولکې لاندې راغله.  او لدې څخه وروسته د  ګندهارا نوم  مخ په ورکېدو شو.
 د افغان واکمنو پر پیر کې به دا پراخه سیمه له کندهار، غزني، غور او بیا په وروستي وخت کې له کابل څخه اداره کېده. د مغولو په پیر کې دا سیمه د کابل د والي لخوا اداره کېده.
 
