--- a/گندهارا.mw
+++ b/گندهارا.mw
@@ -1,6 +1,6 @@
-[[انځور:Gandahara Buddha.JPG|thumb|230px|left|د ګندهارا پیر د بودا (پژۍ]]
+[[انځور:Gandahara Buddha.JPG|thumb|230px||کيڼ|د ګندهارا پیر د بودا (پژۍ]]
 {{otheruses4|the ancient kingdom|the Philippine municipality|Gandara, Samar}}
-[[Image:Ancient india.png|کيڼ|400px]]
+[[انځور:Ancient india.png|thumb||کيڼ|250px]]
 
 '''ګندهارا''' ([[سانسکرېت]]: गन्धार 
 [[پښتو]]: '''ګندھارا''' '' دارنګه په پاړسي چې د وایهند <ref>[http://www.takeourword.com/TOW137/page1.html Tale Our Word For It: Spotlight on Topical Terms]</ref> په نامه پېژندل کېږي، د مهاجناپادا لرغونې بادشاهي (د نن ورځې پښتونخوا او ختیځ افغانستان) تېره شوې.  ګندهارا د کابل پر سیند پرته جلالکوټ، پېښور، سوات، مردان (تخت بايي)، چارسده،  [[ټکسلا]] او [[پټوهار]] پراخه سیمه باندې پروت و. 
