--- a/گندهارا.mw
+++ b/گندهارا.mw
@@ -21,7 +21,7 @@ The Gandhāri people were settled since the [[Vedic civilization|Vedic]] times o
 The boundaries of Gandhara varied throughout history. Sometimes the Peshawar valley and Taxila were collectively referred to as Gandhara and sometimes the [[Swat (Pakistan)|Swat valley]] ''(Sanskrit: Suvāstu)'' was also included. The heart of Gandhara however was always the Peshawar valley. The kingdom was ruled from capitals at Pushkalavati (Charsadda), Taxila, Purushapura (Peshawar) and in its final days from Udabhandapura (Hund) on the Indus. According to the Puranas, they have been named{{Clarifyme|date=March 2008}} after Taksha and Pushkara, the two sons of [[Bharata]], a king  of [[Ayodhya]].
 
 ==لرغونې ګندهارا==
-===Prehistoric Period===
+===مخ تاريخي پېر===
 Evidence of Stone Age human inhabitants of Gandhara, including stone tools and burnt bones, was discovered at Sanghao near Mardan in area caves. The artifacts are approximately 15,000 years old. More recent excavations point to 30,000 years before present.
 
 The region shows an influx of southern Central Asian culture in the [[Bronze Age]] with the [[Gandhara grave culture]] showing a continuum between the early neolithic culture of the region with close ties and relations with the [[Bactria-Margiana Archaeological Complex]]. This culture survived till 600 BC. Its evidence has been discovered in the Hilly regions of [[Lower Swat Valley|Swat]] and [[Panchkora Valley of Dir|Dir]], and even at Taxila.
@@ -34,7 +34,7 @@ Gandharas and their king figure prominently as strong allies of the [[Kuru]]s ag
 
 The Gandhara kingdom sometimes also included [[Kashmir]]. Hecataeus of Miletus (549-468) refers to Kaspapyros (sometimes interpreted as referring to  Kashmira) as a [[Gandhara|Gandaric]] city. According to [[Gandhara Jataka]], (Jataka No 406), at one time, Gandhara formed a part of the kingdom of Kashmir. The Jataka also gives another name ''Chandahara'' for Gandhara. Buddhist texts like [[Anguttara Nikaya]] refer to sixteen great countries ([[Mahajanapadas]]) which flourished in the [[India]]n [[sub-continent]] during Buddha's time; only two of them, the Gandhara and the [[Kambojas|Kamboja]] were located in the [[Uttarapatha]] or the north-western division. 
 
-Gandhāra is also thought to be the location of the mystical [[Lake Dhanakosha]], the birthplace of [[Padmasambhava]], the founder of [[Tibetan Buddhism]]. The [[Kagyu|bKa' brgyud (Kagyu)]] sect of [[Tibetan Buddhism]] identifies the lake with the Andan Dheri [[stupa]], located near the tiny village of Uchh near [[Chakdara]] in the lower [[Swat Valley]]. A spring was said to flow from the base of the stupa to form the lake. Archaeologists have found the stupa but no spring or lake can be identified. 
+Gandhāra is also thought to be the location of the mystical [[Lake Dhanakosha]], the birthplace of [[Padmasambhava]], the founder of [[Tibetan Buddhism]]. The [[Kagyu|bKa' brgyud (Kagyu)]] sect of [[Tibetan Buddhism]] identifies the lake with the Andan Dheri [[stupa]], located near the tiny village of Uchh near [[Chakdara]] in the lower [[Swat Valley]]. A spring was said to flow from the base of the stupa to form the lake. Archaeologists have found the stupa but no spring or lake can be identified.
 
 ===پشکلوتي او پرایاد===
 The primary cities of Gandhara were Purushapura (now [[Peshawar]]), Takshashila or [[Taxila]]) and [[Pushkalavati]]. The latter remained the capital of Gandhara from the 6th century BC to the 2nd century AD, when the capital was moved to Peshawar. An important Buddhist shrine helped to make the city a centre of pilgrimage until the 7th century. Pushkalavati in the [[Peshawar]] Valley is situated at the confluence of the [[Swat River|Swat]] and [[Kabul River|Kabul]] rivers, where three different branches of the River Kabul meet. That specific place is still called Prang (from Prayāga) and considered sacred and where local people still bring their dead for burial. Similar geographical characteristics are found at site of Prang in Kashmir and at the confluence of the [[Ganges River|Ganga]] and [[Yamuna]], where the sacred city of [[Prayag]] is situated, west of  [[Varanasi|Benares]]. Prayāga (Allahabad) one of the ancient pilgrim centres of India as the two rivers are said to be joined here by the underground [[Sarasvati]] River, forming a triveṇī, a confluence of three rivers.
