--- a/گندهارا.mw
+++ b/گندهارا.mw
@@ -43,7 +43,7 @@ The primary cities of Gandhara were Purushapura (now [[Peshawar]]), Takshashila 
 {{main|Taxila}}
 The Gandharan city of Taxila was an important Hindu<ref>{{cite book | last = Majumdar, Raychauduri and Datta |  authorlink | title = An Advanced History of India | origyear = 1946 | publisher = Macmillan| location = London | pages = 64}}</ref> and Buddhist<ref>[http://whc.unesco.org/en/list/139 UNESCO World Heritage Centre: Taxila]</ref> centre of learning from the [[5th century BC]]<ref>[http://whc.unesco.org/en/list/139 UNESCO World Heritage Centre: Taxila]</ref> to the [[2nd century ]].
 
-==Persian rule==
+==د پارسيانو حکمراني==
 [[Cyrus the Great]] (558-530 BC) built first the "universal" empire, stretching from Greece to the Indus River. Both Gandhara and Kamboja soon came under the rule of the [[Achaemenian]] [[Dynasty]] of [[Persia]] during the reign of [[Cyrus the Great]] or in the first year of [[Darius I]]. The Gandhara and Kamboja had constituted the seventh satrapies (upper Indus) of the [[Achaemenid Empire]]. 
 
 When the Achamenids took control of this kingdom, Pushkarasakti, a contemporary of king [[Bimbisara]] of [[Magadha]], was the king of Gandhara. He was enganged in a power struggle against the kingdoms of Avanti and Pandavas. 
