/* Gandhara after invasion by the Huns */

--- a/گندهارا.mw
+++ b/گندهارا.mw
@@ -90,7 +90,7 @@ In Gandhara, Mahayana Buddhism flourished and Buddha was represented in human fo
 
 After Kanishka, the empire started losing territories in the east. In the west, Gandhara came under the [[Sassanid Empire|Sassanid]], the successor state of the Parthians, and became their vassal from AD 241-450.
 
-==Gandhara after invasion by the Huns==
+==ګندهارا د هونز د يرغل وروسته==
 The Hepthalite Huns captured Gandhara around AD 450, and did not adopt Buddhism. During their rule, Hinduism was revived but the Gandharan Civilization declined. The Sassanids, aided by Turks from Central Asia, destroyed the Huns' power base in Central Asia, and Gandhara once again came under Persian suzerainty in AD 568. When the Sassanids were defeated by the Muslim Arabs in AD 644, Gandhara along with Kabul was ruled by Buddhist Turks. 
 
 The travel records of many Chinese Buddhists pilgrims record that Gandhara was going through a transformation during these centuries. Buddhism was declining and Hinduism was rising. Fa-Hsien travelled around AD 400, when Prakrit was the language of the people and Buddhism was flourishing. 100 years later, when Sung-Yun visited in AD 520, a different picture was described: the area had been destroyed by Huns and was ruled by Lae-Lih who did not practice laws of the Buddha. Hsuan-Tsang visited India around AD 644 and found Buddhism on the wane in Gandhara and Hinduism in the ascendant. Gandhara was ruled by a king from Kabul, who respected Buddha's law, but Taxila was in ruins and Buddhist monasteries were deserted. Instead, Hindu temples were numerous and Hinduism was popular.
