/* Gandhara under Turkishahi and Hindushahi */

--- a/گندهارا.mw
+++ b/گندهارا.mw
@@ -95,7 +95,7 @@ The Hepthalite Huns captured Gandhara around AD 450, and did not adopt Buddhism.
 
 The travel records of many Chinese Buddhists pilgrims record that Gandhara was going through a transformation during these centuries. Buddhism was declining and Hinduism was rising. Fa-Hsien travelled around AD 400, when Prakrit was the language of the people and Buddhism was flourishing. 100 years later, when Sung-Yun visited in AD 520, a different picture was described: the area had been destroyed by Huns and was ruled by Lae-Lih who did not practice laws of the Buddha. Hsuan-Tsang visited India around AD 644 and found Buddhism on the wane in Gandhara and Hinduism in the ascendant. Gandhara was ruled by a king from Kabul, who respected Buddha's law, but Taxila was in ruins and Buddhist monasteries were deserted. Instead, Hindu temples were numerous and Hinduism was popular.
 
-==Gandhara under Turkishahi and Hindushahi==
+==ګندهارا د ترکانو او هندوانو د پاچاهۍ په وخت کې==
 After the fall of the Sassanid Empire to the Arabs in 644, Afghanistan and Gandhara came under pressure from Muslims. But they failed to extend their empire to Gandhara. Gandhara was first ruled from Kabul and then from Udabhandapura (Hind).
 
 In 665 Kabul was besieged by the Arabs who did not cross the Hindu Kush.  [[History of Arabs in Afghanistan|The Arabs took Kabul]] They relinquished some of its control as Gandhara was ruled from Kabul by [[Shahi|Turkshahi]] for next 200 years. Sometime in the 9th century the [[Hindushahi]] replaced the Turkishahi. Based on various Muslim records the estimated date for this is 870. According to [[Al-Biruni]] (973-1048), Kallar, a Brahmin minister of the Turkshahi, founded the [[Shahi|Hindushahi]] dynasty in 843. The dynasty ruled from Kabul, later moved their capital to [[Udabhandapura]]. They built great temples all over their kingdoms. Some of these buildings are still in good condition in the Salt Range of the Punjab. 
