--- a/گندهارا.mw
+++ b/گندهارا.mw
@@ -2,7 +2,7 @@
 {{otheruses4|the ancient kingdom|the Philippine municipality|Gandara, Samar}}
 '''ګندهارا''' ([[سانسکرېت]]: गन्धार 
 [[پښتو]]: '''ګندھارا''' '' دارنګه په پاړسي چې د وایهند <ref>[http://www.takeourword.com/TOW137/page1.html Tale Our Word For It: Spotlight on Topical Terms]</ref> په نامه پېژندل کېږي، د مهاجناپادا لرغونې بادشاهي (د نن ورځې پښتونخوا او ختیځ افغانستان) تېره شوې.  ګندهارا د کابل پر سیند پرته جلالکوټ، پېښور، سوات، مردان (تخت بايي)، چارسده،  [[ټکسلا]] او [[پټوهار]] پراخه سیمه باندې پروت و. 
-ددې بادشاهۍ اصلي ښارونه له پروشاپور (پېښور) <ref>from Sanskrit puruṣa= (primordial) man and pura=city</ref>، چې (د سړي د ښار) نامه دی، تکشاشیلا (نننۍ ټکسلا)،<ref>[http://concise.britannica.com/ebc/article-9035986/Gandhara Encyclopædia Britannica: Gandhara]</ref>  او همدا ددې لرغوني تمدن ټاټوبې و.
+ددې بادشاهۍ اصلي ښارونه له پروشاپور (پېښور) <ref>from Sanskrit puruṣa= (primordial) man and pura=city</ref>، چې (د سړي د ښار) نامه دی، تکشاشیلا (نننۍ ټکسلا)،<ref>[http://concise.britannica.com/ebc/article-9035986/Gandhara انسايکلوپېډيا بريټانيکا: ګندهارا]</ref>  او همدا ددې لرغوني تمدن ټاټوبې و.
 د ګندهارا یادونه په لرغونو ویدي سندرو او د بودا په ویناوو کې د رڼاګانو د ځای په مانا راغلې دی.
 چینایي ګرځندوی هیون سانګ چې ددې سیمو په زیارت راوتلې و، ددې سیمې یادونه په ښه تفصیل سره کړې. د هندي فلسفې نامتو فیلسوف کوټلیا چانکیا په هغه پیر کې ژوندې و، کله چې ستر سکندر په ټېکسلا برید وکړ... د کوشانیانو پیر ددې واکمنۍ یو زرین پیر پېژندل کېږي.
 [[انځور:Ancient india.png|thumb||کيڼ|300px]]
