/* د کوشاننیانو زرین پیر */

--- a/گندهارا.mw
+++ b/گندهارا.mw
@@ -78,7 +78,7 @@ Around the time of Menander’s death in 140 BC, the Central Asian Kushans overr
 
 By 90 BC the Parthians took control of eastern Iran and around 50 BC put an end to the last remnants of Greek rule in Afghanistan. By around 7 an  [[Indo-Parthian]] dynasty succeeded in taking control of Gandhara. The Parthians continued to support Greek artistic traditions. The start of the Gandharan [[Greco-Buddhist art]] is dated to c. 50-75 BC. Links between Rome and the Indo-Parthian kingdoms existed. There is archaeological evidence that building techniques were transmitted  between the two realms. Christian records claim that around AD 40 [[Thomas the Apostle]] visited India and encountered the Indo-Parthian king [[Gondophares]].<ref>Bracey, R 'Pilgrims Progress' [http://www.kushan.org/sources/thomasandapollonius.htm Brief Guide to Kushan History]</ref>
 
-==د کوشاننیانو زرین پیر==
+==د کوشانیانو زرین پیر==
 [[Image:GandharaBodhisattva.jpg|thumb|left|150px|Standing Bodhisattva or Bodhisattva Maitreya from Gandhara. 3rd century AD Grey schist. [[Musée des beaux-arts de Montréal]]]]
 The Parthian dynasty fell about 75 to another group from Central Asia. The [[Kushan Empire|Kushans]], known as [[Yuezhi|Yueh-Chih]] in China moved from Central Asia to [[Bactria]], where they stayed for a century. Around 75, one of their tribes, the Kushan (Kuṣāṇa), under the leadership of Kujula Kadphises gained control of Gandhara and other parts of what is now Pakistan. 
 
