*Empty MediaWiki Message*

--- a/لېو_نيكولايوويچ_تولستوى.mw
+++ b/لېو_نيكولايوويچ_تولستوى.mw
@@ -1,12 +1,11 @@
-'''لېو نيكولايوويچ تولستوى'''
-
-د روسيې لوى او نامتو كلاسيك ليكوال (( لېو نيكولايووچ تولستوى )) د [[۱۸۲۸]] ز كال د اگست په ۲۸ نېټه د روسيې د (( تولا )) ايالت د (( ياسنايا پليانا )) په سيمه كې زېږېدلى دى . دى له روسي اريستوكراتانو څخه وو . د مور له پلوه يې له لوى او نامتو روسي شاعر [[پوشكين]] سره لرې خپلوې لرله . تولستوى درې وروڼه (( نيكولاى )) ، (( سيرگى )) ، (( دميتري )) او يوه خور (( مارييا )) لرل . 
+'''لېو نيكولايوويچ تولستوى''' د روسيې لوى او نامتو كلاسيك ليكوال (( لېو نيكولايووچ تولستوى )) د [[۱۸۲۸]] ز كال د اگست په ۲۸ نېټه د روسيې د (( تولا )) ايالت د (( ياسنايا پليانا )) په سيمه كې زېږېدلى دى . دى له روسي اريستوكراتانو څخه وو . د مور له پلوه يې له لوى او نامتو روسي شاعر [[پوشكين]] سره لرې خپلوې لرله . تولستوى درې وروڼه (( نيكولاى )) ، (( سيرگى )) ، (( دميتري )) او يوه خور (( مارييا )) لرل . 
 تولستوى په شاړس كلنۍ كې دپيلوماتيكه څانگه غوره كړه او د كازان پوهنتون د ختيځ پوهنځي د عربي او توركي ژبو په څانگه كې شامل شو . څه موده وروسته يې دغه پوهنځى پرېښود او د حقوقو په پوهنځي كې شامل شو او په پوهنتون كې يې زده كړو درې كاله دوام وكړ . د ځوانۍ پر مهال يې د فرانسي فيلسوف ليكوال ((ژان ژاك روسو )) د اثارو له لوست سره ډېره مينه درلوده ، ان تر دې چې په ۱۸۵۷ ز كال كې له هېواد نه بهر ته په سفر ولاړ او د سفر په ترڅ كې يې هغه ځايونه هم وكتل چې (( روسو )) پكې كوم وخت اوسېدلى او يا يې پكې كار كړى وو . په پاريس كې يې له بل نامتو روسي ليكوال (( تورگېنيف )) سره هم وكتل .
 په راتلونكي لنډمهال كې تولستوى پوهنتون خوشي كړ او (( ياسنايا پليانا )) ته ولاړ . ده ته د خپلو مور او پلار له خوا دومره جايداد او شتمني په ميراث پاتې وو چې ۷۰۰ كسانو بزگرانو او مزدورانو پكې د مرييانو په بڼه كار كاوه . څه موده يې په ياسنايا پليانان كې تېر كړ او بېرته ماسكو ته ستون شو . 
 د څه وخت په تېرېدو سره دده مشر ورور [[نيكولاى]] چې د توپچي افسر وو ، دى له ځان سره قفقاز ته بوت . په قفقاز كې تولستوى لومړى پخپله خوښه او وروسته د افسر په توگه د غرنيو قفقازي وگړو پر وړاندې پوځي عملياتو كې گډون وكړ . تولستوى په قفقاز كې په جدي ډول په ادبياتو بوخت شو او د يوه داسې رومان په ليكلو يې پيل وكړ چې څلور برخې يې درلودې : (( كوشنيتو ب )) ، (( هلكتوب )) ، (( زلميتوب )) او (( ځواني )) چې وروستۍ برخه يې ونه ليكل شوه . هممهال يې د (( يرغل )) ، (( د شتمن گهيځ )) ، (( كازاكان )) او ځينې نور داستانونه او ناولونه وليكل . د قفقاز خاطرو يې په داسې داستانونو كې غبرگون موندلى لكه (( د ځنگله وهل )) ، (( رازژالوواننيې )) ، او د (( كازاكانو )) ناول . د ژوند په پاى كې تولستوى يو ځل بيا د قفقاز موضوع ته پام اړوي او خپل ډېر ځلانده ناول (( حاجي مراد )) ليكي . 
 د روسيې او توركيې ترمنځ جګړې پر مهال تولستوى په ۱۸۵۴ ز كال كې د توركي كلا (( سيليستري )) په كلابندۍ كې برخه درلوده ، هغه مهال يې د دوناى په پوځ كې خدمت كاوه ، خو وروسته يې بيا ځان د (( كريميا )) پوځ ته تبديل كړ . په دې وخت كې ليكوال د (( سېواستوپل كيسې )) اثر وليكه . 
 ليكوال تولستوى په ۱۸۶۳ – ۱۸۶۹ كلونو كې خپل نامتو رومان (( جگړه او سوله )) وليكه . د رومان سوژه د ناپليون له پوځ سره د روسيې جگړه وه . دا مهال او له دې نه وروسته يې دا ناولونه (( پوليكوشكه )) ، (( خولستامېر )) ، رومان (( اننا كارېنينا )) ، (( اېسپووېد )) ، ناول (( د ايوان ايليچ مړينه )) ، ډرامه (( د تيارې واكمني )) ، ناولونه (( كرېڅيرووا سوناتا )) ، (( شيطان )) ، (( حاجي مراد )) ډرامه (( ژوندى مړى )) ، رومان (( واسكرېسېنې )) وليكل . همدا راز يې يو شمېر نور نامتو داستانونه وليكل لكه (( واوره او توپان )) ، (( دوه گوساره )) ، (( سندرغاړى ( ليوڅرن ) )) ، (( البرت )) ، (( درې مړينې )) ، (( خاوند او مزدور )) ، (( پوسلې باله )) او نور . 
 تولستوى د ۱۸۶۲ ز كال په مني كې د (( سوفيه اندرېېونا بېرس )) په نامه يوې اتلس كلنې پېغلې سره واده وكړ . د پنځوس كاله گډ ژوند په اوږدو كې يې ۱۳ اولاده وزېږېدل . د روسيې نامتو ليكوال لېو نيكولايوويچ تولستوى په ۱۹۱۰ ز كال كې ومړ . فرانسي ليكوال (( اندرې موروا )) يو مهال داسې ويلي وو : (( د شېكسپير ، بالزاك او تولستوى پنځونې هغه درې ستر يادگاري څلي دي چې بشريت د بشريت لپاره جوړ كړي دي )) .
+
 {{Refimprove|date=October 2008}}
 {{Essay-like|date=October 2008}}
 {{pp-move-vandalism|small=yes}}
@@ -30,20 +29,20 @@
 
 Tolstoy's further talents as [[essayist]], [[dramatist]] and [[Education reform|educational reformer]] made him the most influential member of the [[aristocracy|aristocratic]] [[Tolstoy|Tolstoy family]]. His literal interpretation of the ethical teachings of [[Jesus]], centering on the [[Sermon on the Mount]], caused him in later life to become a fervent [[Christian anarchism|Christian anarchist]] and [[Christian pacifism|pacifist]]. His ideas on [[nonviolent resistance]], expressed in such works as ''[[The Kingdom of God is Within You]]'', were to have a profound impact on such pivotal twentieth-century figures as [[Mohandas K. Gandhi|Gandhi]]<ref name=ResistNotEvil>[http://www-ee.stanford.edu/~hellman/opinion/Resist_Not.html Martin E. Hellman, ''Resist Not Evil'' in ''World Without Violence'' (Arun Gandhi ed.), M.K. Gandhi Institute, 1994], retrieved on 14 December 2006]</ref> and [[Martin Luther King, Jr.]]
 
-==Biography==
+==ژوندليک==
 Leo Tolstoy was born August 28, 1828, at [[Yasnaya Polyana]], Central Russia. The Tolstoys are a well-known family of old Russian nobility; Tolstoy was connected to the grandest families of Russian aristocracy; [[Alexander Pushkin]] was his fourth cousin. He always remained a class-conscious nobleman who cherished his impeccable French pronunciation and kept aloof from the [[intelligentsia]]{{Fact|date=May 2008}}.
 
-=== Early life ===
+=== پخوانی ژوند ===
 Tolstoy's childhood was spent between [[Moscow]] and Yasnaya Polyana, in a family of three brothers and a sister. He lost his mother when he was two, and his father when he was nine. His subsequent education was in the hands of his aunt, Madame Ergolsky. (His father and mother are respectively the starting points for the characters of Nicholas Rostov and Princess Marya in ''War and Peace''.) In 1844, Tolstoy began studying law and [[Oriental]] languages at [[Kazan University]], where teachers described him as "both unable and unwilling to learn." He found no meaning in further studies and left the university in the middle of a term. In 1849 he settled down at Yasnaya Polyana, where he attempted to be useful to his peasants but soon discovered the ineffectiveness of his uninformed zeal.
 From the very beginning, his diary reveals an insatiable thirst for a rational and moral justification of life, a thirst that forever remained a ruling force in his mind. The same diary was his first experiment in forging a technique of psychological analysis which was to become his principal literary weapon.
 
-=== Military career and first literary efforts ===
+=== پوځي ژوند او لومړنۍ ادبي هڅې ===
 [[Image:Stele in Memory of Leo Tolstoy's Stay on the 4th Bastion in Sevastopol.jpg|thumb|200px|Stele commemorating Tolstoy's participation in 1854-55 defense of [[Sevastopol]]]]
 Tolstoy's first literary effort was a translation of ''[[A Sentimental Journey Through France and Italy]]''. [[Laurence Sterne|Sterne]]'s influence on his early works was substantial, although he subsequently denigrated him as "a devious writer". In 1851, he attempted a more ambitious and more definitely creative kind of writing, his first [[short story]] "A History of Yesterday". In the same year, sick of his seemingly empty and useless life in Moscow, which brought heavy gambling debts, he went to the [[Caucasus]], where he joined an artillery unit garrisoned in the [[Cossack]] part of [[Chechnya]], as a volunteer of private rank, but of noble birth ([[Junker (Russia)|''junker'']]). In 1852 he completed his first novel ''Childhood'' and sent it to [[Nikolai Nekrasov]] for publication in the ''[[Sovremennik]]''. Although Tolstoy was annoyed with the publishing cuts, the story had an immediate success and gave Tolstoy a definite place in Russian literature.
 
 In [[Sevastopol]] he wrote the battlefield observations ''[[Sevastopol Sketches]]'', widely viewed as his first approach to the techniques to be used so effectively in ''War and Peace.'' Appearing as they did in the ''Sovremennik'' monthly while the [[siege of Sevastopol]] was still on, the stories greatly increased the general interest in their author. In fact, the Tsar [[Alexander II of Russia|Alexander II]] was known to have said in praise of the author of the work, "Guard well the life of that man." Soon after the abandonment of the fortress, Tolstoy went on leave of absence to St. Petersburg and Moscow. The following year he left the army.
 
-=== Between retirement and marriage ===
+=== د واده او کورناستۍ تر مېنځ وخت ===
 
 The years 1856–61 were passed between Petersburg, Moscow, Yasnaya, and foreign countries. In 1857 (and again in 1860-61) he traveled abroad and returned disillusioned by the selfishness and [[materialism]] of European [[bourgeois]] civilization, a feeling expressed in his short story ''Lucerne'' and more circuitously in ''Three Deaths''. As he drifted towards a more [[oriental]] worldview with [[Buddhist]] overtones, Tolstoy learned to feel himself in other living creatures. He started to write ''[[Kholstomer]]'', which contains a passage of [[interior monologue]] by a horse. Many of his intimate thoughts were repeated by a protagonist of ''[[The Cossacks (novel)|The Cossacks]]'', who reflects, falling on the ground while hunting in a forest:
 
@@ -61,7 +60,7 @@ In 1862 Tolstoy published a pedagogical magazine, ''Yasnaya Polyana'', in which 
 
 Meanwhile his insatiate quest for moral stability continued to torment him. He had now abandoned the wild living of his youth, and thought of marrying. In 1856 he made his first unsuccessful attempt to marry [[Mlle Arseniev]]. In 1860 he was profoundly affected by the death of his brother Nicholas.  Although he had lost his parents and guardian aunts during his childhood, Tolstoy considered the death of his brother to be his first encounter with the inevitable reality of death. After these reverses, Tolstoy reflected in his diary that at thirty four, no woman could love him, since he was too old and ugly. In 1862, at last, he proposed to Sofia Andreyevna Behrs and was accepted. They were married on 24 September of the same year.
 
-=== Marriage and family life ===
+=== واده او کورنی ژوند ===
 {{SectOR|date=June 2008}}
 [[Image:Tolstoy family.jpg|thumb|200px|Tolstoy's wife, Sofia Andreevna Tolstaya, and daughter Alexandra Tolstaya]]
 
@@ -78,7 +77,7 @@ Tolstoy had always been fundamentally a [[rationalist]]. But at the time he wrot
 
 Tolstoy's rationalism found satisfaction in the admirably constructed system of his doctrine. But the irrational Tolstoy remained alive beneath the hardened crust of crystallized [[dogma]]. Tolstoy's diaries reveal that the desires of the flesh were active in him until an unusually advanced age; and the desire for expansion, the desire that gave life to ''War and Peace'', the desire for the fullness of life with all its pleasure and beauty, never died in him. We catch few glimpses of this in his writings, for he subjected them to a strict and narrow discipline.  He wrote as effortlessly as ever in his late years and produced admirable works of art, such as ''[[Hadji Murat (novel)|Hadji Murad]]'', one of many pieces that appeared posthumously. It became increasingly apparent that, in the words of [[Vladimir Nabokov]], there were only two subjects that Tolstoy was really interested in and thought worth writing about – and that is [[life]] and [[death]]. The relationship between life and death was examined by him over and over again, with increasing complexity, in the final version of ''Kholstomer'', in ''War and Peace'', in ''[[The Death of Ivan Ilyich]]'', in ''[[How Much Land Does a Man Need?]]'' and in ''[[Master and Man]]''.
 
-=== Later life ===
+=== د ژوند وروستي وختونه ===
 [[File:Tolstoy 1899.jpg|thumb|Caricature of Tolstoy from [[Vanity Fair caricatures|Vanity Fair]], 1899]]
 Soon after ''A Confession'' became known, Tolstoy began, at first against his will, to attract disciples. The first of these was [[Vladimir Chertkov]], an ex-officer of the Horse Guards and founder of the [[Tolstoyan]]s, described by [[D.S. Mirsky]] as a "narrow fanatic and a hard, despotic man, who exercised an enormous practical influence on Tolstoy and became a sort of grand [[vizier]] of the new community". Tolstoy also established contact with certain sects of [[Christian communism|Christian communists]] and [[Christian anarchism|anarchists]], like the [[Dukhobors]]. Despite his unorthodox views and support for [[Thoreau]]'s doctrine of [[civil disobedience]], Tolstoy was unmolested by the government, solicitous to avoid negative publicity abroad. Only in 1901 did the [[Synod]] excommunicate him. This act, widely but rather unjudiciously resented both at home and abroad, merely registered a matter of common knowledge – that Tolstoy had ceased to be a follower of the Orthodox Church.
 
@@ -115,16 +114,16 @@ Tolstoy's contemporaries paid him lofty tributes: [[Fyodor Dostoyevsky]] thought
 
 Later critics and novelists continue to bear testaments to his art: [[Virginia Woolf]] went on to declare him "greatest of all novelists", and [[James Joyce]], defending him from criticism, noted: "He is never dull, never stupid, never tired, never pedantic, never theatrical". [[Thomas Mann]] wrote of his seemingly guileless artistry — "Seldom did art work so much like nature" — sentiments shared in part by many others, including [[Marcel Proust]] and [[William Faulkner]]. [[Vladimir Nabokov]], himself a Russian and an infamously harsh critic, placed him above all other Russian fiction writers, even [[Gogol]], and equalled him with [[Pushkin]] among Russian writers.<ref>{{cite book|last=Nabokov|first=Vladimir|title=Lectures on Russian Literature|editor=Fredson Bowers|publisher=Harcourt Brace Jovanovich|location=New York|date=1981|pages=137|isbn=0-15-149599-8}}</ref>
 
-==Religious and political beliefs==
+==مذهبي او سياسي ګروهې==
 [[Image:Ilya Efimovich Repin (1844-1930) - Portrait of Leo Tolstoy (1887).jpg|thumb|175px|Leo Tolstoy, by [[Ilya Yefimovich Repin|Repin]] (1887)]]
 
 At about age 50, Tolstoy experienced a spiritual crisis, at which point he was so agonized about discovering life's meaning as to seriously contemplate ending his life. He relates the story of this spiritual crisis in ''[[A Confession]]'', and the conclusions of his studies in ''[[My Religion (Tolstoy)|My Religion]]'', ''[[The Kingdom of God is Within You]]'' and ''The Gospels in Brief''.
 
-=== Social Christianity ===
+=== ټولنيز عيسويت ===
 
 The teaching of mature Tolstoy concentrated exclusively on the moral teaching of the Gospels. Tolstoy's Christian beliefs were based on the [[Sermon on the Mount]], and particularly on the phrase "[[turn the other cheek]]", which he saw as a justification for pacifism, [[nonviolence]] and [[nonresistance]]. Of the moral teaching of [[Christ]], the words "Resist not evil" were taken to be the principle out of which all the rest follows. He condemned the State, which he saw as sanctioning violence and corruption,{{Fact|date=October 2008}} and rejected the authority of the Church, which sanctioned the State. His condemnation of every form of compulsion authorizes many{{Who|date=October 2008}} to classify Tolstoy's later teachings as [[Christian anarchism]].
 
-=== Christian anarchism ===
+=== د عيسويانو انارشيزم ===
 {{main|Christian anarchism}}
 Although he did not call himself an [[anarchism|anarchist]] because he applied the term to those who wanted to change society through violence,<ref>Woodcock, George. Anarchism: A History of Libertarian Ideas and Movements, Broadview Press, 2004, p. 185</ref> Tolstoy is commonly regarded as an anarchist. His doctrine of nonresistance (nonviolence) when faced by conflict is another distinct attribute of his philosophy based on Christ's teachings. By directly influencing [[Mahatma Gandhi]] with this idea through his work ''The Kingdom of God is Within You'', Tolstoy has had a huge influence on the nonviolent resistance movement to this day. He opposed private property and the institution of marriage and valued the ideals of [[chastity]] and [[sexual abstinence]] (as discussed in ''Father Sergius'' and his preface to ''[[The Kreutzer Sonata]]''), ideals also held by the young Gandhi.
 [[Image:Tolstoy ploughing.jpg|thumb|left|250px|''Tolstoy Plowing'', by [[Ilya Yefimovich Repin|Repin]]]]
@@ -155,16 +154,16 @@ Along with his growing idealism, Tolstoy also became a major supporter of the [[
 == List of works ==
 {{Main|Bibliography of Leo Tolstoy}}
 
-==References==
+==سرچينې==
 {{mirsky}}
 {{reflist}}
 
-==External links==
+==باندنۍ تړنې==
 {{Literature Portal}}
 {{sisterlinks|Leo Tolstoy}}
 *[[Edward Winter (chess historian)|Edward Winter]], [http://www.chesshistory.com/winter/extra/tolstoy.html Tolstoy and Chess]
 
-===Leo Tolstoy dedicated websites===
+===ليو تولستوی ته ځانګړې وېبپاڼې===
 * [http://www.yasnayapolyana.ru/ Leo Tolstoy museum in Yasnaya Polyana]
 * {{ru icon}} [http://www.tolstoymuseum.ru/ State Leo Tolstoy Museum in Moscow]
 
@@ -186,7 +185,7 @@ Along with his growing idealism, Tolstoy also became a major supporter of the [[
 * [http://www.ibe.unesco.org/publications/ThinkersPdf/tolstoye.PDF S.F. Yegorov, ''Leo Tolstoy'', in PROSPECTS: the quarterly review of comparative education, Vol XXIV, no 3/4, June 1994, UNESCO, p. 647-660] (about Tolstoy's writings on education)
 * {{IBList |type=author|id=160|name=Leo Tolstoy}}
 
-===Leo Tolstoy in the media===
+===ليوتولستوی په رسنيو کې===
 * {{imdb name|id=0866243|name=Leo Tolstoy}}
 * Portrayed by Bill Jones in the film [[Lives and Deaths of the Poets]] (2009)
 * [http://people.emich.edu/wmoss/publications/ ALEXANDER II AND HIS TIMES: A Narrative History of Russia in the Age of Alexander II, Tolstoy, and Dostoevsky]
