--- a/تبه.mw
+++ b/تبه.mw
@@ -13,7 +13,7 @@
   eMedicineTopic = 785 |
   DiseasesDB     = 18924 |}}
 
-[[Image:Clinical thermometer 38.7.JPG|thumb|right|An analogue medical thermometer showing the temperature of 38.7 °C]]
+[[انځور:Clinical thermometer 38.7.JPG|thumb|کيڼ|An analogue medical thermometer showing the temperature of 38.7 °C]]
 
 '''تبه''' (ته په طبي اصطلاح '''pyrexia'''، يا '''febrile ځواب''' وايي، دا ويي د لاطيني لغت [[febris]] نه چې په مانه د تبې ده راوتلی، په لرغوني پېر کې د '''ague''' يا آګو په نامه پېژندل کېده) يوه عامه طبي نښه ده چې د بدن داخلي تودوخه څرګندوي a frequent [[medicine|medical]] [[symptom]] that describes an increase in internal [[body temperature]] to levels that are above normal (37°C, 98.6°F). Fever is most accurately characterized as a temporary elevation in the body’s thermoregulatory set-point, which is usually by about 1-2°C. Fever differs from [[hyperthermia]], which is an increase in body temperature over the body’s thermoregulatory set-point (due to excessive heat production or insufficient [[thermoregulation]], or both). In hospitals fever is daily recorded with fever charts.
 
@@ -104,7 +104,7 @@ Treatment of fever should primarily be based on lowering the setpoint, but facil
 * [http://www.nlm.nih.gov/medlineplus/ency/article/003090.htm US National Institute of Health factsheet]
 * [http://hcd2.bupa.co.uk/fact_sheets/html/fever.html BUPA factsheet]
 
-[[Category:Symptoms]]
+[[وېشنيزه:Symptoms]]
 
 [[ar:حمى]]
 [[bg:Треска (болест)]]
