--- a/روهتاس_کلا.mw
+++ b/روهتاس_کلا.mw
@@ -51,7 +51,7 @@
 ددې كلا يو ور (لنګر خاني ور) د نظامي كلا پر لور ورپرانيستل كېږي، ځكه چې دا ور په مستقيم ډول د جنګ ډګر ته مخامخ دى.
 
 ==د جوړونې بيه==
-The work on this fort was started in 1541 with [[Todar Mal Khatri]], the revenue minister in charge of the project. The [[Gakhars]] whose area the fort was built on refused to provide labor for this project.
+د روهتاس کلا جوړېدنه د شیر شاه سوري وزیر ټوډر مېل کاتري تر نظر لاندې په ۱۵۴۱ز کال پیل شوه. د ګکړ ولس (د روهتاس اوسېدونکي) ددې لپاره د کلا په جوړونه کې له ګډون څخه سر وغړاوه او کاریګرو یې پرېکون وکړ، ځکه چې دا کلا د هغوي په زمکه جوړېده. د روهتاس کلا د مصرف په اړه ضد و نقیض روایتونه دی. 
 
 Todar Mal faced with such problems informed Sher Shah about these difficulties who wrote in reply,” I know you for a man of business, understanding and intelligence. I see no work can be expected from you, because you consider money as your friend. When I have commanded you to do a thing you ought not to have cared for money in fixing the rate. Whatever be the expenses, shall be borne by my government.”
 
