--- a/روهتاس_کلا.mw
+++ b/روهتاس_کلا.mw
@@ -51,11 +51,10 @@
 ددې كلا يو ور (لنګر خاني ور) د نظامي كلا پر لور ورپرانيستل كېږي، ځكه چې دا ور په مستقيم ډول د جنګ ډګر ته مخامخ دى.
 
 ==د جوړونې بيه==
-د روهتاس کلا جوړېدنه د شیر شاه سوري وزیر ټوډر مېل کاتري تر نظر لاندې په ۱۵۴۱ز کال پیل شوه. د ګکړ ولس (د روهتاس اوسېدونکي) ددې لپاره د کلا په جوړونه کې له ګډون څخه سر وغړاوه او کاریګرو یې پرېکون وکړ، ځکه چې دا کلا د هغوي په زمکه جوړېده. د روهتاس کلا د مصرف په اړه ضد و نقیض روایتونه دی. 
+د روهتاس کلا جوړېدنه د شیر شاه سوري وزیر ټوډر مېل کاتري تر نظر لاندې په ۱۵۴۱ز کال پیل شوه. د ګکړ ولس (د روهتاس اوسېدونکي) ددې لپاره د کلا په جوړونه کې له ګډون څخه سر وغړاوه او کاریګرو یې پرېکون وکړ، ځکه چې دا کلا د هغوي په زمکه جوړېده. ټودر مېل سمدلاسه شېرشاه سوري له دې ستونزې څخه خبر کړ، هغه ورته په لیک کې داسې ځواب ورکړ:
+زه تا د یو سوداګر سړي په توګه پېژنم، ځکه چې تا پېسې خپلې ملګرې ګرځولي. کله چې ما درته امر وکړ، چې یو کار وکړه، ته باید د بیې په جوړولو کې د پیسو پروا ونکړې. هرڅومره خرڅ چې راځي، زما دولت به یې په غاړه اخلي.
+ددې ځواب د ترلاسه کولو سره سم، ټوډرمېل په لومړۍ ورځ د یوې ډبرې په راوړلو یوه اشرفۍ ( د وخت پیسه) وټاکله. د وخت په تېرېدو سره دا بیه یوې [[پاولۍ]] یا [[بهلولي]] ته راوغورځېد.
 
-Todar Mal faced with such problems informed Sher Shah about these difficulties who wrote in reply,” I know you for a man of business, understanding and intelligence. I see no work can be expected from you, because you consider money as your friend. When I have commanded you to do a thing you ought not to have cared for money in fixing the rate. Whatever be the expenses, shall be borne by my government.”
-
-After receiving this reply, he fixed one red [[Ashrafi]] for each slab on the first day. The rate gradually decreased to one [[Paoli]] or [[Bahluli]].
 
 Because of the boycott the cost of construction was huge. It would have been much lower had it not been for the Ghakkars. The following sources all give slightly different estimates of the cost
 
