--- a/روهتاس_کلا.mw
+++ b/روهتاس_کلا.mw
@@ -51,18 +51,15 @@
 ددې كلا يو ور (لنګر خاني ور) د نظامي كلا پر لور ورپرانيستل كېږي، ځكه چې دا ور په مستقيم ډول د جنګ ډګر ته مخامخ دى.
 
 ==د جوړونې بيه==
-د روهتاس کلا جوړېدنه د شیر شاه سوري وزیر ټوډر مېل کاتري تر نظر لاندې په ۱۵۴۱ز کال پیل شوه. د ګکړ ولس (د روهتاس اوسېدونکي) ددې لپاره د کلا په جوړونه کې له ګډون څخه سر وغړاوه او کاریګرو یې پرېکون وکړ، ځکه چې دا کلا د هغوي په زمکه جوړېده. ټودر مېل سمدلاسه شېرشاه سوري له دې ستونزې څخه خبر کړ، هغه ورته په لیک کې داسې ځواب ورکړ:
+د روهتاس کلا جوړېدنه د شیر شاه سوري د وزیر ټوډر مېل کاتري تر نظر لاندې په ۱۵۴۱ز کال پیل شوه. د ګکړ ولس (د روهتاس اوسېدونکي) ددې لپاره د کلا په جوړونه کې له ګډون څخه سر وغړاوه او کاریګرو یې پرېکون وکړ، ځکه چې دا کلا د هغوي په زمکه جوړېده. ټودر مېل سمدلاسه شېرشاه سوري له دې ستونزې څخه خبر کړ، هغه ورته په لیک کې داسې ځواب ورکړ:
 زه تا د یو سوداګر سړي په توګه پېژنم، ځکه چې تا پېسې خپلې ملګرې ګرځولي. کله چې ما درته امر وکړ، چې یو کار وکړه، ته باید د بیې په جوړولو کې د پیسو پروا ونکړې. هرڅومره خرڅ چې راځي، زما دولت به یې په غاړه اخلي.
 ددې ځواب د ترلاسه کولو سره سم، ټوډرمېل په لومړۍ ورځ د یوې ډبرې په راوړلو یوه اشرفۍ ( د وخت پیسه) وټاکله. د وخت په تېرېدو سره دا بیه یوې [[پاولۍ]] یا [[بهلولي]] ته راوغورځېد.
-
-
-Because of the boycott the cost of construction was huge. It would have been much lower had it not been for the Ghakkars. The following sources all give slightly different estimates of the cost
-
-*Waqiat-i-Jahangiri says the cost was Rs. 34,25,000. It refers to an engraved stone over the Shishi Gate which reads
-
-“The amount is 16, 10, 00,000 [[Dam (coin)|Dams]] and something more, which is 34, 25,000 Rupees of Hindustan, 120,000 [[Iranian toman|Tumans]] of Iran or 1,21,75,000 [[Khanis]] of [[Turan]]”.
-
-*According to Tarikh-i-Daudi, its cost is 80,505,002 Dams ([[Bahlulis]]).
+د ګکړو د کاربندیز له وجې د ودانۍ خرڅ دېر لوړ شو.  په لاندې توګه یو څو ضد و نقیض اټکلونه شوي دی:
+واقعاتې جهانګیري وایی، چې ددې کلا ودانولو باندې ۳۴۲۵۰۰۰ اشرفۍ خرڅ راغلې و. دا اټکل د هغې کیندل شوې ډبرې له مخې شوې، کومه چې د شیشي ور په لګېدلې.
+د ګکړو د کاربندیز له وجې د ودانۍ خرڅ دېر لوړ شو.  په لاندې توګه یو څو ضد و نقیض اټکلونه شوي دی:
+واقعاتې جهانګیري وایی، چې ددې کلا ودانولو باندې ۳۴۲۵۰۰۰ اشرفۍ خرڅ راغلې و. دا اټکل د هغې کیندل شوې ډبرې له مخې شوې، کومه چې د شیشي ور په لګېدلې.
+ټوله بیه ۱۶۱۰۰۰۰۰۰ یا داسې څه، چې له ۳۴۲۵۰۰۰ هندوستاني روپۍ، ۱۲۰۰۰۰ پارسي تومنو سره برابر، یا ۱۱۲۷۵۰۰۰ توریاني خانېسې.
+د داوودي تاریخ له مخې ددې کلا ټولټال خرڅ ۸۰۵۰۵۰۰۲ [[بهلولۍ]] شوې و.
 
 ==د څوكۍ دېوال==
 [[Image:Bastions, Battlements,Terraces and Terrains.jpg|left|thumb|200px|Bastions,Battlements,Terraces and Terrains]]
