--- a/روهتاس_کلا.mw
+++ b/روهتاس_کلا.mw
@@ -50,7 +50,7 @@
 
 ددې كلا يو ور (لنګر خاني ور) د نظامي كلا پر لور ورپرانيستل كېږي، ځكه چې دا ور په مستقيم ډول د جنګ ډګر ته مخامخ دى.
 
-==د جوړونې بيه==
+==د کلا جوړونې ټولټال خرڅ==
 د روهتاس کلا جوړېدنه د شیر شاه سوري د وزیر ټوډر مېل کاتري تر نظر لاندې په ۱۵۴۱ز کال پیل شوه. د ګکړ ولس (د روهتاس اوسېدونکي) ددې لپاره د کلا په جوړونه کې له ګډون څخه سر وغړاوه او کاریګرو یې پرېکون وکړ، ځکه چې دا کلا د هغوي په زمکه جوړېده. ټودر مېل سمدلاسه شېرشاه سوري له دې ستونزې څخه خبر کړ، هغه ورته په لیک کې داسې ځواب ورکړ:
 زه تا د یو سوداګر سړي په توګه پېژنم، ځکه چې تا پېسې خپلې ملګرې ګرځولي. کله چې ما درته امر وکړ، چې یو کار وکړه، ته باید د بیې په جوړولو کې د پیسو پروا ونکړې. هرڅومره خرڅ چې راځي، زما دولت به یې په غاړه اخلي.
 ددې ځواب د ترلاسه کولو سره سم، ټوډرمېل په لومړۍ ورځ د یوې ډبرې په راوړلو یوه اشرفۍ ( د وخت پیسه) وټاکله. د وخت په تېرېدو سره دا بیه یوې [[پاولۍ]] یا [[بهلولي]] ته راوغورځېد.
