*Empty MediaWiki Message*

--- a/بله_نسته_کندهارۍ.mw
+++ b/بله_نسته_کندهارۍ.mw
@@ -3,18 +3,13 @@
 وايي چې د شلو کالو په عمر د «غيرې» کوتل ته په لرګو پسې ختلې وه او هلته له يوه پاڼه لوېدلې او مړه شوې وه.
 
 ددې د يوه شعر څو بيته ما د يو سپين ږيري له خولې اورېدلی او يادداشت کړی او هغه دا دی:
-
-بيا پر ما د بېلتانه راغلته غمونه نن بيا
-
-چې يې کېښوول په زړه راته داغونه نن بيـا
-
-ملالې زرکې ګرځي چې په غرو کې
-
-پخپله خوښه الوځي شينلو کې
-
-ما خو هم درسره واخله په چمبو کې
-
-چې وګورم د لويو غرو سرونه نن بيا
+<center>
+{{شعر}}
+{{ب|بيا پر ما د بېلتانه راغلته غمونه نن بيا|چې يې کېښوول په زړه راته داغونه نن بيـا}}
+{{ب|ملالې زرکې ګرځي چې په غرو کې|پخپله خوښه الوځي شينلو کې}}
+{{ب|ما خو هم درسره واخله په چمبو کې|چې وګورم د لويو غرو سرونه نن بيا}}
+{{د شعر پای}}
+</center>
 
 == سرچينه ==
 
