*Empty MediaWiki Message*

--- a/بله_نسته_کندهارۍ.mw
+++ b/بله_نسته_کندهارۍ.mw
@@ -5,7 +5,7 @@
 ددې د يوه شعر څو بيته ما د يو سپين ږيري له خولې اورېدلی او يادداشت کړی او هغه دا دی:
 <center>
 {{شعر}}
-{{ب|بيا پر ما د بېلتانه راغلته غمونه نن بيا|چې يې کېښوول په زړه راته داغونه نن بيـا}}
+{{ب|بيا پر ما د بېلتانه راغله غمونه نن بيا|چې يې کېښوول په زړه راته داغونه نن بيـا}}
 {{ب|ملالې زرکې ګرځي چې په غرو کې|پخپله خوښه الوځي شينلو کې}}
 {{ب|ما خو هم درسره واخله په چمبو کې|چې وګورم د لويو غرو سرونه نن بيا}}
 {{د شعر پای}}
